# threecharades

./: .gitignore  CMakeLists.txt  main.cpp  qml.qrc
input/: dictionary.txt  passwords.txt
qmls/: FewWords.qml  MyKeys.qml  OneWord.qml  Scoreboard.qml  StartPage.qml  main.qml
utils/: DataFile.cpp  DataFile.h  ResultFile.cpp  ResultFile.h
